# api/router.go
@@ -66,11 +66,12 @@ func Register(
 	// Purchase Order Item routes
 	purchaseOrderItemGroup := v1.Group("/purchase-order-items")
 	{
+		purchaseOrderItemGroup.Get("/", purchase_order_item.AllPurchaseOrderItems(logger))
 		purchaseOrderItemGroup.Get("/:po_id", purchase_order_item.PurchaseOrderItems(logger))
 		purchaseOrderItemGroup.Post("/", purchase_order_item.CreatePurchaseOrderItem(logger))
-		purchaseOrderItemGroup.Get("/:item_id", purchase_order_item.PurchaseOrderItem(logger))
-		purchaseOrderItemGroup.Put("/:po_id/items/:item_id", purchase_order_item.UpdatePurchaseOrderItem(logger))
-		purchaseOrderItemGroup.Delete("/:po_id/items/:item_id", purchase_order_item.DeletePurchaseOrderItem(logger))
+		purchaseOrderItemGroup.Get("/item/:item_id", purchase_order_item.PurchaseOrderItem(logger))
+		purchaseOrderItemGroup.Put("/:item_id", purchase_order_item.UpdatePurchaseOrderItem(logger))
+		purchaseOrderItemGroup.Delete("/:item_id", purchase_order_item.DeletePurchaseOrderItem(logger))
 	}
 
 	// Report routes
